# Spot

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml
crates/kernel/: Cargo.toml  config.toml
crates/kernel/src/: api.rs  block.rs  config.rs  entity.rs  gameplay.rs  item.rs  main.rs  nbt.rs  network.rs  registry.rs  test.rs  util.rs  world.rs
crates/kernel/src/block/: air.rs  bedrock.rs  birch_leaves.rs  cave_air.rs  deepslate.rs  grass_block.rs  leaves.rs  logs.rs
crates/kernel/src/entity/: entity_manager.rs  player.rs
crates/kernel/src/item/: block_items.rs  dirt_item.rs  grass_block_item.rs  stone_item.rs
crates/kernel/src/network/: connection.rs  packet.rs
crates/kernel/src/network/packet/: c2s.rs  s2c.rs
crates/kernel/src/network/packet/c2s/: acknowledge_finish_configuration.rs  (+5 more)
crates/kernel/src/registry/: biome.rs  damage_type.rs  dimension_type.rs  painting_variant.rs  protocol_id.rs  registries.rs  wolf_variant.rs
crates/kernel/src/test/: world_test.rs
crates/kernel/src/util/: arc_channel.rs  io.rs  raw.rs
crates/kernel/src/world/: block_update.rs  chunk.rs  dimension.rs  gen.rs  height_map.rs
crates/spotlight/: Cargo.toml
crates/spotlight/src/: event.rs  identifier.rs  lib.rs  nbt.rs
src/: block.rs  config.rs  entity.rs  main.rs  registry.rs  util.rs  world.rs
src/block/: birch_log.rs  deepslate.rs  dirt.rs  oak_leaves.rs  oak_log.rs  stone.rs
src/entity/: entity_manager.rs  player.rs
src/network/: connection.rs  packet.rs
src/network/packet/: c2s.rs  s2c.rs
src/network/packet/c2s/: acknowledge_finish_configuration.rs  client_info.rs  config_known_packs_c2s.rs  login_acknowledged.rs  login_acknowledged_c2s.rs  login_start.rs  login_start_c2s.rs
src/network/packet/s2c/: config_known_packs_s2c.rs  config_registry_data_s2c.rs  finish_configuration.rs  login_success_s2c.rs  play_login_s2c.rs  registry_data.rs
src/registry/: biome.rs  damage_type.rs  dimension_type.rs  painting_variant.rs  protocol_id.rs  registries.rs  wolf_variant.rs  wolf_variants.rs
src/test/: world_test.rs
src/util/: direct_pointer.rs
src/world/: chunk.rs  dimension.rs
static/: biomes.json  blocks.json  dimension_types.json  wolf_variants.json
(+9 files in other folders)
