[package]
name = "Spot"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = "1.40.0"
tklog = "0.2.0"
bytes = "1.7.1"
dashmap = "6.1.0"
serde = "1.0.210"
serde_json = "1.0.128"
serde_derive = "1.0.210"
static-files = "0.2.4"
fastrand = "2.1.1"
nohash-hasher = "0.2.0"
mimalloc = "0.1.43"
rayon = "1.10.0"
once_cell = "1.19.0"
parking_lot = "0.12.3"
sha2 = "0.10.8"
toml = "0.8.19"
downcast-rs = "1.2.1"
hashbrown = "0.14.5"

[build-dependencies]
static-files = "0.2.4"

[profile.release]
lto = "fat"