[package]
name = "Spot"
version = "0.0.1"
edition = "2021"

[workspace]
members = ["crates/spotlight"]

[[bin]]
name = "Spot"
path = "crates/kernel/src/main.rs"

[profile.release]
lto = "fat"

[dependencies]
spotlight = { path = "crates/spotlight", version = "0.0.1" }
tokio = { version = "1.40.0", features = ["full"] }
bytes = "1.7.2"
dashmap = { version = "6.1.0", features = ["inline"] }
serde = "1.0.210"
serde_json = "1.0.128"
serde_derive = "1.0.210"
static-files = "0.2.4"
fastrand = "2.1.1"
nohash-hasher = "0.2.0"
mimalloc = "0.1.43"
rayon = "1.10.0"
parking_lot = "0.12.3"
sha2 = "0.10.8"
toml = "0.8.19"
downcast-rs = "1.2.1"
hashbrown = { version = "0.15.0", features = ["inline-more"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
anyhow = "1.0.89"
thiserror = "1.0.64"

[build-dependencies]
static-files = "0.2.4"
